--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node-dev --max_old_space_size=2018 --trace_gc ./bin/www ",
-    "quene": "node ./model/postMess.js"
+    "start": "node-dev --max_old_space_size=2018 --experimental-worker --inspect ./bin/www ",
+    "quene": "node --trace_gc ./model/postMess.js "
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -13,7 +13,8 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "log4js": "^3.0.5",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "worker-threads-pool": "^1.0.0"
   },
   "devDependencies": {
     "console-color-mr": "^2.0.0"
