--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node-dev --max_old_space_size=2018 --experimental-worker --inspect ./bin/www ",
+    "start": "node-dev --max_old_space_size=2018 --experimental-worker --inspect ./bin/www",
     "quene": "node --trace_gc ./model/postMess.js "
   },
   "dependencies": {
@@ -14,6 +14,8 @@
     "jade": "~1.11.0",
     "log4js": "^3.0.5",
     "morgan": "~1.9.0",
+    "pm2": "^3.1.2",
+    "webworker-threads": "^0.7.17",
     "worker-threads-pool": "^1.0.0"
   },
   "devDependencies": {
